--- a/gpt3_title_optimizer_walkthrough.ipynb
+++ b/gpt3_title_optimizer_walkthrough.ipynb
@@ -104,7 +104,7 @@
     "title_input = \"Absurd AI-Generated Professional Food Photography with DALL-E 2\"\n",
     "\n",
     "r = openai.Completion.create(\n",
-    "    model=\"text-davinci-002\",\n",
+    "    model=COMPLETION_MODEL,\n",
     "    prompt=base_prompt.format(title_input),\n",
     "    temperature=0,  # deterministic output; should set to 0.7 or 1 elsewise\n",
     "    max_tokens=256,  # fine for small titles but may need to bump\n",
@@ -414,7 +414,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -428,9 +428,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.10"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
